Main container created

--- a/Frontend/Szakdolgozat/src/app/content/content.component.html
+++ b/Frontend/Szakdolgozat/src/app/content/content.component.html
@@ -1,3 +1,8 @@
 <div id="content">
-    <app-taskbar></app-taskbar>
+    <div class="float-left left-content">
+        <app-main-container></app-main-container>
+    </div>
+    <div class="float-right right-content">
+        <app-taskbar></app-taskbar>
+    </div>
 </div>
