--- a/Frontend/Szakdolgozat/src/app/content/content.component.css
+++ b/Frontend/Szakdolgozat/src/app/content/content.component.css
@@ -1,4 +1,14 @@
 #content{
     width: 100%;
-    background-color: blue;
+}
+.left-content{
+    background-color: aqua;
+    height: 100%;
+    width: 80%;
+}
+
+.right-content{
+    background-color: bisque;
+    height: 100%;
+    width: 20%;
 }
