Classes added. Set routing.

--- a/Frontend/Szakdolgozat/src/app/content/content.component.html
+++ b/Frontend/Szakdolgozat/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 <div id="content">
     <div class="float-left left-content">
-        <app-main-container></app-main-container>
+        <router-outlet></router-outlet>
     </div>
     <div class="float-right right-content">
         <app-taskbar></app-taskbar>
