--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -2,28 +2,28 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="#">Főoldal</a>
+                <a class="nav-link" routerLink="">Főoldal</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Munkaidő-nyilvántartó</a>
+                <a class="nav-link" routerLink="work-time">Munkaidő-nyilvántartó</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Feladatkezelő</a>
+                <a class="nav-link" routerLink="">Feladatkezelő</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Szabadság tervező</a>
+                <a class="nav-link" routerLink="">Szabadság tervező</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Időbeosztás tervező</a>
+                <a class="nav-link" routerLink="">Időbeosztás tervező</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Listázás</a>
+                <a class="nav-link" routerLink="">Listázás</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Adminisztráció</a>
+                <a class="nav-link" routerLink="">Adminisztráció</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="#">Karbantartás</a>
+                <a class="nav-link" routerLink="">Karbantartás</a>
             </li>
             <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
