Upload work-time panel component init

--- a/Frontend/Szakdolgozat/src/app/work-time/work-time.component.html
+++ b/Frontend/Szakdolgozat/src/app/work-time/work-time.component.html
@@ -1,1 +1,8 @@
-<p>work-time works!</p>
+<div class="h-100 row mx-md-n5" id="work-time-container">
+    <div class="h-100 w-50 d-inline-block float-left col px-md-5">
+        <app-calendar></app-calendar>
+    </div>
+    <div class="h-100 w-50 d-inline-block float-right border-left col px-md-5">
+        <app-upload-work-time></app-upload-work-time>
+    </div>
+</div>
