--- a/Frontend/Szakdolgozat/src/app/upload-work-time/upload-work-time.component.html
+++ b/Frontend/Szakdolgozat/src/app/upload-work-time/upload-work-time.component.html
@@ -1,6 +1,6 @@
 <div class="mr-5">
   <br>
-  <h2 class="text-center" id="date">{{ selectedDate }}</h2>
+  <h2 class="text-center" id="date"></h2>
 
   <br>
 
@@ -51,121 +51,14 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
-          <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
-        </tr>
-        <tr>
-          <th class="w-25">Teszt</th>
-          <td>60</td>
-          <td class="w-50">asd asdasd adasda a asdasda sd a sd as d as d as d asd as d sadddddddd asd as d as d a sd a s d
-            as d a sd a sd as as d as d as d as d</td>
-          <td class="text-right w-25"><button type="button" class="btn btn-primary mr-1">Módosítás</button>
-            <button type="button" class="btn btn-primary mr-1">Törlés</button></td>
+        <tr *ngFor="let activity of activities">
+          <th class="w-25">{{ activity.activityGroup.name }}</th>
+          <td>{{ activity.min }}</td>
+          <td class="w-50">{{ activity.description }}</td>
+          <td class="text-right w-25">
+            <button type="button" class="btn btn-primary mr-1">Módosítás</button>
+            <button type="button" class="btn btn-danger mr-1">Törlés</button>
+          </td>
           <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
         </tr>
       </tbody>
