--- a/Frontend/Szakdolgozat/src/app/work-time/work-time.component.html
+++ b/Frontend/Szakdolgozat/src/app/work-time/work-time.component.html
@@ -1,8 +1,80 @@
 <div class="h-100 row mx-md-n5" id="work-time-container">
     <div class="h-100 w-50 d-inline-block float-left col px-md-5">
-        <app-calendar></app-calendar>
+
+            <div class="container m-md-2 px-md-3 h-100" id="calendar"></div>
+
     </div>
     <div class="h-100 w-50 d-inline-block float-right border-left col px-md-5">
-        <app-upload-work-time></app-upload-work-time>
+
+        <div class="mr-5">
+            <br>
+            <h2 class="text-center" id="date"></h2>
+
+            <br>
+
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="">Feladat</span>
+                </div>
+                <select class="custom-select" id="inputGroupSelect01">
+                    <option selected>Válassz</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="">Idő</span>
+                </div>
+                <input type="text" class="form-control">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="">Óra</span>
+                </div>
+                <input type="text" class="form-control">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="">Perc</span>
+                </div>
+            </div>
+            <br><br>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Megjegyzés</span>
+                </div>
+                <textarea class="form-control" aria-label="With textarea"></textarea>
+            </div>
+
+            <br><br>
+            <button type="button" class="btn btn-primary mr-3">Mentés</button>
+            <button type="button" class="btn btn-primary">Törlés</button>
+
+            <br><br>
+
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
+                <table class="table table-striped mb-0">
+                    <thead>
+                        <tr>
+                            <th scope="col">Feladat</th>
+                            <th scope="col">Idő</th>
+                            <th scope="col">Megjegyzés</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let activity of activities">
+                            <th class="w-25">{{ activity.activityGroup.name }}</th>
+                            <td>{{ activity.min }}</td>
+                            <td class="w-50">{{ activity.description }}</td>
+                            <td class="text-right w-25">
+                                <button type="button" class="btn btn-primary mr-1">Módosítás</button>
+                                <button type="button" class="btn btn-danger mr-1">Törlés</button>
+                            </td>
+                            <!-- <td><button type="button" class="btn btn-primary mr-1">Törlés</button></td> -->
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+
+        </div>
+
     </div>
 </div>
