--- a/Frontend/Szakdolgozat/src/styles.css
+++ b/Frontend/Szakdolgozat/src/styles.css
@@ -4,3 +4,5 @@
 html{
     user-select: none;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
