--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -7,11 +7,11 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="work-time">Munkaidő-nyilvántartó</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="">Feladatkezelő</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-                <a class="nav-link" routerLink="">Szabadság tervező</a>
+                <a class="nav-link" routerLink="holiday">Szabadság tervező</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="">Időbeosztás tervező</a>
