--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -19,24 +19,23 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="">Listázás</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="">Adminisztráció</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="">Karbantartás</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Dropdown
+            </li> -->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Karbantartás
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" routerLink="maintenance-user">Felhasználók</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" routerLink="maintenance-project">Projektek</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" routerLink="">Feladatok</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" routerLink="">Jogosultságok</a>
                 </div>
-            </li> -->
+            </li> 
             <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li> -->
