--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -31,7 +31,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="maintenance-project">Projektek</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" routerLink="">Feladatok</a>
+                    <a class="dropdown-item" routerLink="maintenance-activity-group">Feladatok</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="">Jogosultságok</a>
                 </div>
