--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -4,26 +4,26 @@
             <li class="nav-item active">
                 <a class="nav-link" routerLink="">Főoldal</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="work-time">Munkaidő-nyilvántartó</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="">Feladatkezelő</a>
             </li> -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="holiday">Szabadság tervező</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="">Időbeosztás tervező</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="">Listázás</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" routerLink="">Adminisztráció</a>
             </li> -->
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Karbantartás
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -33,7 +33,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="maintenance-activity-group">Feladatok</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" routerLink="">Jogosultságok</a>
+                    <a class="dropdown-item" routerLink="maintenance-permission">Jogosultságok</a>
                 </div>
             </li> 
             <!-- <li class="nav-item">
